# gambling

./: .gitignore  DataCleaning.ipynb  README.md  feature_names.pkl  main.py  model_train.py  pyproject.toml  todo.md  train_model.py  visible_bluff_feature_names.pkl  visible_bluff_train.py
AAA_SUBMISSION_DR_BUKOWY_PLEASE_LOOK_HERE/: 00_mega_final_project.html  00_mega_final_project.ipynb  Dataset Card - Online Poker Games.md  mega_final_project_helpers.py
data/: feature_names.pkl
notebooks/: 00_mega_final_project.ipynb  01_action_model_1000_hands.ipynb  01_cleaning_eda_and_export.ipynb  02_eda_stage_models_visual.ipynb  03_dashboard_models_explained.ipynb  03_visible_bluff_model.ipynb  04_stage_inference_checks.ipynb  BluffModeling.ipynb  DataCleaning.ipynb  EdaAndStreaks.ipynb  MoneyModeling.ipynb  Simulations.ipynb  WinModeling.ipynb  _train_action_advisor_export.py  action_model_1000_hands.html  mega_final_project_helpers.py
poker_page/: action_advisor.py  action_model.json  avatars.py  bot_backend.py  cards_html.py  coach_engine.py  game_state.py  hand_eval.py  heuristics.py  index.html  live_seat_metrics.py  main.py  poker_core.py  pyscript.toml  style.css  table_guests.py
scripts/data/: cleaner.py  pokerkit_parser.py  training_dataset.py
scripts/features/: hand_eval.py  poker_hand_strength.py  streaks.py  visible_bluff_features.py
scripts/game/: __init__.py  bot_backend.py  engine_adapter.py  session_model.py
scripts/models/: bluff_predictor.py  feature_contracts.py  money_predictor.py  stage_win_predictor.py  stats_tests.py  visible_bluff_predictor.py  (+1 more)
(+6 files in other folders)
