[project]
name = "gambling"
version = "0.1.0"
description = "Poker Behavior Analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "seaborn",
    "pokerkit>=0.7.3",
    "scikit-learn",
    "scipy",
    "streamlit",
]
