[project]
name = "gambling"
version = "0.1.0"
description = "Poker Behavior Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "seaborn",
    "pokerkit>=0.7.3",
    "scikit-learn",
    "scipy",
]

# Pylance/Pyright: seaborn (and similar libs) often trigger "could not be resolved from source"
# even when installed — they are not typed for strict source resolution.
[tool.pyright]
reportMissingModuleSource = "none"
# Notebooks import `poker_core` / `game_state` from `poker_page/` (not a top-level package).
extraPaths = ["poker_page"]
